--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -28,20 +28,20 @@ h3,
 h4,
 h5,
 h6 {
-  line-height: normal;
+  font-family: $font-family-heading;
+  font-weight: $font-weight-normal;
+  line-height: $line-height-heading;
   margin-top: 0;
 }
 
 h1 {
   font-size: 3em;
-  font-weight: $font-weight-light;
   letter-spacing: 1px;
   margin: 0 0 0.4em;
 }
 
 h2 {
   font-size: 1.2em;
-  font-weight: $font-weight-light;
   letter-spacing: 1px;
 }
 
@@ -54,6 +54,10 @@ ol {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+strong {
+  font-weight: $font-weight-semibold;
 }
 
 figure {
