--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,10 +1,10 @@
-$font-family-default: "Lato", $font-stack-system;
-$font-family-heading: $font-stack-georgia;
+$font-family-default: "Tofino Personal", $font-stack-system;
+$font-family-heading: $font-family-default;
 $font-family-code: $font-stack-monaco;
 
 $font-weight-light: 300;
 $font-weight-normal: 400;
-$font-weight-bold: 700;
+$font-weight-semibold: 600;
 
 $font-size-small: 0.875em;
 $font-size-base: 1em;
@@ -13,7 +13,8 @@ $font-size-large: 2.7em;
 $font-size-xlarge: 3em;
 $font-size-xxlarge: 3.8em;
 
-$base-line-height: 1.4;
+$base-line-height: 1.6;
+$line-height-heading: 1.2;
 
 $black: #000;
 $gold: rgb(226, 206, 0);
