--- a/app/assets/stylesheets/pages/repos/_organization.scss
+++ b/app/assets/stylesheets/pages/repos/_organization.scss
@@ -60,7 +60,7 @@ $dropdown-arrow: $white image-url("select-arrow.svg") no-repeat;
 
 .organization-header-title {
   @include ellipsis;
-  font-weight: bold;
+  font-weight: $font-weight-semibold;
   letter-spacing: 0;
   line-height: 1.4;
   margin-bottom: 0;
